fixed codeql issue